--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 MONGO_URI=mongodb+srv://eyesofdeer:34575@cluster0.690t3rq.mongodb.net/
-EMAIL_USER=eyes.of.little.deer5@gmail.com
-EMAIL_PASS=iwmd bxkd rjdn rsdz
+# EMAIL_USER=eyes.of.little.deer5@gmail.com
+# EMAIL_PASS=jzar tgkc rqtz wfdw
+EMAIL_USER= wavedev13@gmail.com
+EMAIL_PASS= atlx welc tqub pxam
 JWT_SECRET=34575
